# AutoStash

./: .gitignore  Cargo.toml  README.MD  config.toml  foo.db  report_pir_grp1.md
auto_stash/: Cargo.toml
auto_stash/src/: lib.rs  main.rs
diff/: Cargo.toml
diff/src/: lib.rs
diff_track/: Cargo.toml
diff_track/src/: lib.rs
event_handle/: Cargo.toml
event_handle/src/: lib.rs
filewatch/: Cargo.toml
filewatch/src/: lib.rs
store/: Cargo.toml
store/src/: lib.rs
test/: test
tui/: Cargo.toml
tui/src/: lib.rs
tui/src/tui_main/: app.rs  mod.rs  ui.rs
tui/src/util/: mod.rs
ui/: Cargo.toml
ui/src/: lib.rs  ui.rs  widgets.rs
ui/src/util/: mod.rs
