[package]
name = "auto_stash"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>", "AlexanderBrese <admin@alexanderbrese.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

filewatch = { path = "../filewatch" }
store = { path = "../store" }
event_handle = { path = "../event_handle" }
ui = { path = "../ui" }
diff = { path = "../diff"}
flume = "0.10.7"