[package]
name = "tui"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui = "0.15"

tui = { version = "0.15", features = ["crossterm"], default-features = false }
termion = "1.5"
argh = "0.1"
rand = "0.8"
store = { path = "../store" }
event_handle = { path = "../event_handle" }
filewatch = { path = "../filewatch" }
crossterm = "0.19"