[package]
name = "ui"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", features = ["crossterm"], default-features = false }
argh = "0.1"
rand = "0.8"
crossterm = "0.19"
flume = "0.10.7"
parking_lot = "0.7.1"

store = { path = "../store" }
diff = { path = "../diff" }
event_handle = { path = "../event_handle" }
filewatch = { path = "../filewatch" }
